<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="#66ff66">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/nharvest"
            android:id="@+id/ntext"
            android:textStyle="bold|italic"
            android:textSize="24sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stype"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ffffff"
                android:id="@+id/stype" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crop"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ffffff"
                android:id="@+id/crop" />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/fsize"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:id="@+id/fsize" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/dos"
            android:background="@android:color/transparent"
            android:id="@+id/dos"
            android:textColor="#ffffff"
            android:clickable="true"/>
        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:background="#2eb82e"
            android:clickable="true"/>
    </LinearLayout>
</FrameLayout>